name:                activehs
version:             0.3.1.1
category:            Education, Documentation
synopsis:            Haskell code presentation tool
description:
    ActiveHs is a Haskell source code presentation tool, developed for
    education purposes.
    .
    User's Guide: <http://lambda.inf.elte.hu/fp/UsersGuide_en.xml>
    .
    Developer's Documentation (partial): <http://lambda.inf.elte.hu/fp/DevDoc_en.xml>
    .
    The software is in prototype phase, although it already served more
    than 700 000 user requests at Eötvös Loránd University Budapest, Hungary.
    .
    Note that this software has many rough edges; you are welcome to
    work on it!
stability:           alpha
license:             BSD3
license-file:        LICENSE
author:              Péter Diviánszky
maintainer:          divip@aszt.inf.elte.hu
cabal-version:       >=1.6
build-type:          Simple
data-files:
    copy/*.css, 
    copy/*.js, 
    copy/icon.ico, 
    template/*.template,
    doc/UsersGuide_en.lhs,
    doc/DevDoc_en.lhs,
    doc/watchserver.sh

Executable activehs
  GHC-Options: -threaded -rtsopts -Wall -fwarn-tabs -fno-warn-incomplete-patterns -fno-warn-type-defaults -fno-warn-unused-matches -fno-warn-name-shadowing
  Main-is: 
    Main.hs
  Other-modules:
    Paths_activehs,
    Parse,
    Converter,
    Args,
    Simple,
    Smart,
    Cache,
    Hash,
    Specialize,
    Qualify,
    Lang,
    Result,
    HoogleCustom,
    Html,
    Logger,
    QuickCheck,
    Snap,
    Special

  Build-Depends:
    highlighting-kate >= 0.5 && < 0.7,
    hoogle >= 4.2.11 && < 4.3,
    dia-base >= 0.1 && < 0.2,
    dia-functions >= 0.2.1.1 && < 0.3,
    activehs-base >= 0.2 && < 0.4,
    data-pprint >= 0.2 && < 0.3,
    base >= 4.0 && < 4.9,
    QuickCheck >= 2.4 && < 2.9,
    array >= 0.3 && < 0.6,
    directory >= 1.1 && < 1.3,
    containers >= 0.4 && < 0.6,
    filepath >= 1.2 && < 1.5,
    text >= 1.1 && < 1.3,
    snap-core >= 0.6 && < 0.10,
    snap-server >= 0.6 && < 0.10,
    syb >= 0.2 && < 0.6,
    haskell-src-exts >= 1.15 && < 1.17,
    bytestring >= 0.9 && < 0.11,
    utf8-string >= 0.3 && < 1.1,
    xhtml >= 3000.2 && < 3000.3,
    blaze-html >= 0.6 && < 0.9,
    blaze-markup >= 0.6 && < 0.8,
    pureMD5 >= 2.1 && < 2.2,
    deepseq >= 1.1 && < 1.5,
    exceptions >= 0.6 && < 0.9,
    split >= 0.1 && < 0.3,
    pandoc >= 1.10 && < 1.16,
    time >= 1.2 && < 1.6,
    old-time >= 1.0 && < 1.2,
    process >= 1.0 && < 1.3,
    hint >= 0.4 && < 0.5,
    simple-reflect >= 0.2 && < 0.4,
    mtl >= 2.0 && < 2.3,
    old-locale >= 1.0 && < 1.1,
    cmdargs >= 0.7 && < 0.11

